--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -27,6 +27,7 @@
     <Content Include="Website\APGApp.js" />
     <Content Include="Website\game.html" />
     <Content Include="Website\client.css" />
+    <Content Include="Website\GameLogic.js" />
     <Content Include="Website\phaser.js" />
     <Content Include="Website\phaser.min.js" />
   </ItemGroup>
@@ -45,6 +46,7 @@
     <None Include="web.Release.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
+    <Content Include="Website\GameLogic.js.map" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">12.0</VisualStudioVersion>
